# libregex

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  array.c  array.h  capture.c  config.h.in  configure  configure.ac  consume.c  libregex.h  main.c  make.c  token.c  util.c
.github/workflows/: ccpp.yml
src/: Makefile.am  Makefile.in  array.c  array.h  arraytest  arraytest.c  capture.c  consume.c  find.c  hashmap.c  hashmap.h  hashmaptest  hashmaptest.c  libregex.h  main.c  make.c  options.c  test.c  test2  test2.c  testlib.c  testlib.h  token.c  util.c
