bin_PROGRAMS = libregex libregextest
libregex_SOURCES = array.h libregex.h array.c capture.c consume.c main.c make.c options.c token.c util.c find.c
libregex_CFLAGS = -g -O3

libregextest_SOURCES = array.h libregex.h array.c capture.c consume.c test.c make.c options.c token.c util.c find.c
libregextest_CFLAGS = -g -O3

TESTS = libregextest